Alignment correction for tags and test with temporary header-footer

--- a/src/components/GenreTags/genretags.scss
+++ b/src/components/GenreTags/genretags.scss
@@ -1,7 +1,9 @@
 .genre-tags {
-    display: inline-flex;
+    display: flex;
     flex-wrap:wrap;
-    justify-content: center;
+    justify-content: center; 
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
 }
 .genre-tag {
     transition: 300ms;
@@ -18,7 +20,7 @@
     white-space:nowrap;
     &:hover{
         transition: 100ms;
-        transform:translateY(-5px) scale(1.05);
+        transform:translateY(-2px) scale(1.05);
         //margin: 0.2rem 0.35rem 0.2rem 0.35rem;        
         background-color:#206b4c;
     }
