--- a/src/components/InstrumentTags/instrumenttags.scss
+++ b/src/components/InstrumentTags/instrumenttags.scss
@@ -1,3 +1,11 @@
+
+.instrument-tags {
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: center;    
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
 .instrument-tag {    
     transition: 300ms;
     width: 3rem;
@@ -9,14 +17,8 @@
     cursor:pointer;
     &:hover{
         transition: 100ms;        
-        transform:translateY(-5px) scale(1.05);
+        transform:translateY(-2px) scale(1.05);
         //margin: 0.2rem 0.35rem 0.2rem 0.35rem;        
         background-color:#48d89c;
     }
-}
-
-.instrument-tags {
-    display: inline-flex;
-    flex-wrap:wrap;
-    justify-content: center;
 }
